--- a/ParkCore/app/src/main/res/values/strings.xml
+++ b/ParkCore/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ParkCore</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_parking_spot">ParkingSpot</string>
 </resources>
